--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -70,5 +70,11 @@
     "whisper_model_hint": "Від обраної моделі залежить швидкість та якість транскрипції. Для більшості задач підійде модель base. \nЧим вище та важча модель, тим довше буде проходити транскрипція, але і якість суттєво збільшується. Рекомендація: використовувати base або small.",
     "vertical_margin_hint": "Змінює положення субтитрів по вертикалі, завжди по центру. Вимірюється в пікселях.",
     "fade_hint": "Налаштовує ефект плавного з'явлення та зникнення субтитрів для того, щоб воно не було різким.",
-    "max_words_hint": "Кількість слів, яка одночасно буде з'являтись на екрані. Менша кількість — частіше змінюються субтитри для динаміки, більша — довше знаходяться на екрані."
+    "max_words_hint": "Кількість слів, яка одночасно буде з'являтись на екрані. Менша кількість — частіше змінюються субтитри для динаміки, більша — довше знаходяться на екрані.",
+    "template_list_hint": "Список ваших збережених шаблонів. При виборі шаблону тут нічого не змінюється, не переймайтесь.",
+    "template_name_hint": "Якщо шаблон вже існуючий, то тут відображається ім'я шаблону. Якщо шаблону не існує, то при збереженні шаблону назва береться саме звідси. Якщо будете перезаписувати існуючий шаблон, то назва має співпадати з тим шаблоном, який вже існує.",
+    "template_notes_hint": "Це нотатка, яка ні на що не впливає. Вона слугує виключно для вашої зручності, для того щоб відмічати, які відмінності в шаблоні. Зберігається для кожного шаблону окремо.",
+    "template_edit_hint": "Це редактор обраного шаблону. Обираєте шаблон зі списку, натискаєте на Редагувати і перед вами з'являється список всіх налаштувань, збережених в шаблоні, які ви можете змінювати або переглядати, не застосовуючи постійно шаблон на глобальні налаштування програми.",
+    "template_save_hint": "Збереження налаштувань в шаблон. Будьте уважні: при збереженні налаштування обраного шаблону перезапишуться глобальними налаштуваннями, які наразі збережені в програмі.",
+    "template_apply_hint": "Застосовує обраний шаблон на всю програму, перезаписуючи налаштування. Будьте обережні."
 }
