--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -237,6 +237,8 @@
     "continue_montage_button": "Продолжить монтаж",
     "template_label": "Шаблон:",
     "template_name_label": "Имя шаблона:",
+    "template_notes_group_title": "ЗАМЕТКИ",
+    "template_notes_placeholder": "Введите заметки для выбранного шаблона здесь...",
     "new_button": "Создать",
     "save_button": "Сохранить",
     "save_as_button": "Сохранить как...",
@@ -337,8 +339,6 @@
     "none_template": "Нет",
     "setting_header": "Настройка",
     "value_header": "Значение",
-    "template_notes_group_title": "Заметки к шаблону",
-    "template_notes_placeholder": "Введите заметки к выбранному шаблону здесь...",
     "default_settings": "Глобальные настройки",
     "template": "Шаблон",
     "whisper_model_download_info": "Модель Whisper '{model_name}' не найдена в кеше. Начинается одноразовая загрузка. Это может занять некоторое время...",
