--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -76,5 +76,8 @@
     "template_notes_hint": "Це нотатка, яка ні на що не впливає. Вона слугує виключно для вашої зручності, для того щоб відмічати, які відмінності в шаблоні. Зберігається для кожного шаблону окремо.",
     "template_edit_hint": "Це редактор обраного шаблону. Обираєте шаблон зі списку, натискаєте на Редагувати і перед вами з'являється список всіх налаштувань, збережених в шаблоні, які ви можете змінювати або переглядати, не застосовуючи постійно шаблон на глобальні налаштування програми.",
     "template_save_hint": "Збереження налаштувань в шаблон. Будьте уважні: при збереженні налаштування обраного шаблону перезапишуться глобальними налаштуваннями, які наразі збережені в програмі.",
-    "template_apply_hint": "Застосовує обраний шаблон на всю програму, перезаписуючи налаштування. Будьте обережні."
+    "template_apply_hint": "Застосовує обраний шаблон на всю програму, перезаписуючи налаштування. Будьте обережні.",
+    "notifications_enable_hint": "вмикає сповіщення в телеграм, програма буде надсилати важливі сповіщення про конкретні етапи в програмі. Наприклад, якщо у вас увімкнено Контроль перекладу або рерайту — програма пришле вам повідомлення, коли переклад для якоїсь мови буде готовий. Якщо у вас увімкнено контроль зображень, програма пришле повідомлення про готовність до монтажу із проханням переглянути зображення для редагування або продовження монтажу. Перейдіть за посиланням для першої активації бота для коректної роботи.",
+    "telegram_user_id_hint": "ID вашого акаунту, на який бот буде надсилати вам повідомлення. Ви можете натиснути кнопку «Отримати ID» для автоматичного отримання вашого Telegram ID.",
+    "bot_link_hint": "Перейдіть за посиланням для першої активації бота для коректної роботи."
 }
