--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -247,6 +247,8 @@
     "rename_button": "Переименовать",
     "error": "Ошибка",
     "success": "Успех",
+    "help_legend": "— <b>ПОДСКАЗКА</b>",
+    "info_icon_hint": "В настройках возле каждого пункта есть такой значок подсказки с детальным объяснением функции.",
     "template_name_empty_error": "Имя шаблона не может быть пустым.",
     "template_saved_success": "Шаблон '{name}' успешно сохранен.",
     "save_as_title": "Сохранить как",
