--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -79,5 +79,6 @@
     "template_apply_hint": "Застосовує обраний шаблон на всю програму, перезаписуючи налаштування. Будьте обережні.",
     "notifications_enable_hint": "вмикає сповіщення в телеграм, програма буде надсилати важливі сповіщення про конкретні етапи в програмі. Наприклад, якщо у вас увімкнено Контроль перекладу або рерайту — програма пришле вам повідомлення, коли переклад для якоїсь мови буде готовий. Якщо у вас увімкнено контроль зображень, програма пришле повідомлення про готовність до монтажу із проханням переглянути зображення для редагування або продовження монтажу. Перейдіть за посиланням для першої активації бота для коректної роботи.",
     "telegram_user_id_hint": "ID вашого акаунту, на який бот буде надсилати вам повідомлення. Ви можете натиснути кнопку «Отримати ID» для автоматичного отримання вашого Telegram ID.",
-    "bot_link_hint": "Перейдіть за посиланням для першої активації бота для коректної роботи."
+    "bot_link_hint": "Перейдіть за посиланням для першої активації бота для коректної роботи.",
+    "info_icon_hint": "У налаштуваннях біля кожного пункту є такий значок підказки з детальним поясненням функції."
 }
