--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -245,9 +245,10 @@
     "save_as_button": "Зберегти як...",
     "apply_button": "Застосувати",
     "delete_button": "Видалити",
-    "rename_button": "Перейменувати",
     "error": "Помилка",
     "success": "Успіх",
+    "help_legend": "— <b>ПІДКАЗКА</b>",
+    "info_icon_hint": "У налаштуваннях біля кожного пункту є такий значок підказки з детальним поясненням функції.",
     "template_name_empty_error": "Ім'я шаблону не може бути порожнім.",
     "template_saved_success": "Шаблон '{name}' успішно збережено.",
     "save_as_title": "Зберегти як",
