--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -275,6 +275,9 @@
     "prompt_label": "Prompt:",
     "enter_prompt_placeholder": "Enter prompt...",
     "temperature_label": "Temperature:",
+    "input_source_label": "Input Source:",
+    "input_source_text": "Translated/Original Text",
+    "input_source_task_name": "Task Name",
     "current_template_label": "Current Template",
     "confirm_save_title": "Confirm Save",
     "confirm_save_template_text": "Are you sure you want to save changes to template '{name}'?",
