--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -80,5 +80,6 @@
     "notifications_enable_hint": "Включает уведомления в телеграм, программа будет отправлять важные уведомления о конкретных этапах в программе. Например, если у вас включен Контроль перевода или рерайта — программа пришлет вам сообщение, когда перевод для какого-то языка будет готов. Если у вас включен контроль изображений, программа пришлет сообщение о готовности к монтажу с просьбой просмотреть изображения для редактирования или продолжения монтажа. Перейдите по ссылке для первой активации бота для корректной работы.",
     "telegram_user_id_hint": "ID вашего аккаунта, на который бот будет присылать вам сообщения. Вы можете нажать кнопку «Получить ID» для автоматического получения вашего Telegram ID.",
     "bot_link_hint": "Перейдите по ссылке для первой активации бота для корректной работы.",
-    "info_icon_hint": "В настройках возле каждого пункта есть такой значок подсказки с детальным объяснением функции."
+    "info_icon_hint": "В настройках возле каждого пункта есть такой значок подсказки с детальным объяснением функции.",
+    "input_source_label": "Выберите источник данных для этого этапа. Вы можете использовать обработанный текст (перевод/оригинал) или название задачи.\nИспользование названия задачи позволяет генерировать контент на основе краткого описания или заголовка, например, для создания специфических метаданных или идей. Структура запроса: {Промт} + {Перевод\\Оригинальный текст}\n {Промт} + {Название задания}"
 }
