--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -276,6 +276,9 @@
     "prompt_label": "Промт:",
     "enter_prompt_placeholder": "Введите промт...",
     "temperature_label": "Температура:",
+    "input_source_label": "Источник входных данных:",
+    "input_source_text": "Переведенный/Оригинальный текст",
+    "input_source_task_name": "Название задачи",
     "current_template_label": "Текущий шаблон",
     "confirm_save_title": "Подтвердить сохранение",
     "confirm_save_template_text": "Вы уверены, что хотите сохранить изменения в шаблон '{name}'?",
