--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -276,6 +276,9 @@
     "prompt_label": "Промт:",
     "enter_prompt_placeholder": "Введіть промт...",
     "temperature_label": "Температура:",
+    "input_source_label": "Джерело вхідних даних:",
+    "input_source_text": "Перекладений/Оригінальний текст",
+    "input_source_task_name": "Назва завдання",
     "current_template_label": "Поточний шаблон",
     "confirm_save_title": "Підтвердити збереження",
     "confirm_save_template_text": "Ви впевнені, що хочете зберегти зміни в шаблон '{name}'?",
