--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -6,7 +6,7 @@
     "rewrite_review_label": "Останавливает программу после рерайта текста, чтобы вы могли проверить качество перефразирования.\nУ вас будет возможность перегенерировать рерайт, а также изменить настройки рерайта и промпт для одного конкретного раза.",
     "image_review_label": "Останавливает программу после генерации изображений, позволяя вам просмотреть их в галерее, удалить или перегенерировать неудачные перед монтажом видео.",
     "prompt_count_control_label": "Контроль промптов позволяет контролировать количество промптов, которые вам вернула нейросеть. Если, например, ваш промпт настроен на 50 промптов,\nа нейросеть вернула вам из-за ошибки 30 промптов, то программа автоматически сверит количество и, если оно будет отличаться от указанного количества, перегенерирует результат.\nЕсли после 3 попыток программе не удастся получить желаемое количество промптов, будет использоваться последнее полученное количество промптов.",
-    "max_download_threads_label": "Количество одновременных потоков для загрузки контента при рерайте. Больше потоков ускоряет работу, но может нагрузить сеть.",
+    "max_download_threads_hint": "Количество одновременных загрузок материалов (видео/аудио) из интернета. Высокие значения ускоряют работу, но нагружают сеть.",
     "max_concurrent_requests": "Количество одновременных запросов к нейросети. Рекомендуется ставить от 5 до 10 в зависимости от лимитов вашего API ключа. Большее количество может привести к ошибкам 'Rate Limit'.",
     "openrouter_add_model_hint": "Для добавления новой модели скопируйте ее полное название с сайта OpenRouter (например, 'google/gemini-2.0-flash-exp:free') и вставьте в это поле, после чего нажмите кнопку 'Добавить'. Добавленная модель появится в списке выше.",
     "char_limit": "Это максимальное количество символов, которое позволяет озвучить ваш текущий тарифный план Voicemaker за один запрос.\nЕсли текст длиннее, программа автоматически разделит его на части (чанки) в соответствии с этим лимитом.",
@@ -36,6 +36,7 @@
     "tts_provider_label": "Сервис озвучки текста. Перед использованием выбранного сервиса, пожалуйста, убедитесь, что вы настроили его на вкладке Настройки > API > Аудио.",
     "background_music_label": "Наложение фоновой музыки на видео. Если музыкальный файл короче видео, программа автоматически зациклит его.",
     "music_volume_label": "Возможность настроить уровень громкости фоновой музыки так, чтобы она не перебивала голос озвучки.",
+    "elevenlabs_proxy_hint": "Это настройка для людей из Украины, которые не могут из-за ограничений пользоваться сервисом ElevenLabs. Включите настройку и вставьте прокси в поле ввода, формат CUrl\\http, все запросы к сервису ElevenLabs будут идти через прокси.",
     "elevenlabs_template_label": "Выбор предварительно настроенного шаблона голоса. В списке доступны профили, созданные и сконфигурированные через Telegram-бот сервиса ElevenLabs.",
     "eleven_unlim_voice_id_label": "Уникальный идентификатор (Voice ID) голоса из библиотеки ElevenLabs. Рекомендуется использовать бесплатные голоса. Параметры стабильности и сходства можно дополнительно настроить ниже.",
     "voicemaker_voice_label": "Выбор голосовой модели из списка доступных решений сервиса VoiceMaker. Каждый голос обладает уникальными характеристиками тембра и интонации.",
