--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -133,7 +133,7 @@
     "general_tab_title": "General",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "Model:",
-    "pollinations_token_label": "API (optional):",
+    "pollinations_token_label": "API (preferably!):",
     "pollinations_token_placeholder": "Enter your API key",
     "image_size_label": "Size (Width x Height):",
     "nologo_label": "Remove Logo",
@@ -379,7 +379,8 @@
     "edgetts_test_link": "You can test the service and choose voices at this link:",
     "elevenlabs_buy_info": "You can buy an API key (limits) for ElevenLabs here:",
     "elevenlabs_unlim_buy_info": "You can buy an API key (limits) for ElevenLabs Unlimited here:",
-    "pollinations_info": "You can test the service and get a token at this link:",
+    "pollinations_info": "You can test the service at this link:",
+    "pollinations_get_key_info": "You can get a free key at this link:",
     "openrouter_info": "Here you can choose models and top up your balance:",
     "voicemaker_info": "You can top up your balance and get a token here:",
     "assemblyai_info": "You can get an API key on the official website:",
