--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -11,7 +11,7 @@
     "openrouter_add_model_hint": "Для добавления новой модели скопируйте ее полное название с сайта OpenRouter (например, 'google/gemini-2.0-flash-exp:free') и вставьте в это поле, после чего нажмите кнопку 'Добавить'. Добавленная модель появится в списке выше.",
     "char_limit": "Это максимальное количество символов, которое позволяет озвучить ваш текущий тарифный план Voicemaker за один запрос.\nЕсли текст длиннее, программа автоматически разделит его на части (чанки) в соответствии с этим лимитом.",
     "pollinations_model_label": "Выбор модели для генерации изображений. Разные модели имеют разные стили и возможности.",
-    "pollinations_token_label": "Ввод АПІ ключа (токена) Pollinations. \nПри использовании АПІ доступны все модели сервиса, а без АПІ только kontext и turbo.",
+    "pollinations_token_label": "Ввод API ключа (токена) Pollinations. \nБез API ключа действуют очень жесткие ограничения, картинка в 15 секунд (это ограничение сервиса PollinationsAI) \nпоэтому получите бесплатный API ключ доступа на сайте https://enter.pollinations.ai/ для генерации 1 картинки в 5 секунд. \nБез ключа доступны следующие модели: flux, trubo, zimage. \nС ключом доступны следующие модели: kontext, nanobanana, seedream, seedance, veo.",
     "image_size_label": "Настройка разрешения сгенерированных изображений (Ширина x Высота). Рекомендуется использовать стандартные размеры, например 1280x720.",
     "nologo_label": "Если включено, программа будет пытаться генерировать изображения без водяного знака Pollinations.",
     "enhance_prompt_label": "Автоматическое улучшение вашего текстового запроса нейросетью для получения более детализированного и качественного результата.",
