--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -134,7 +134,7 @@
     "general_tab_title": "Общие",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "Модель:",
-    "pollinations_token_label": "АПІ (необязательно):",
+    "pollinations_token_label": "АПІ (желательно!):",
     "pollinations_token_placeholder": "Введите ваш АПІ ключ",
     "image_size_label": "Размер (Ширина x Высота):",
     "nologo_label": "Убрать логотип",
@@ -383,7 +383,8 @@
     "googler_buy_info": "Купить API ключ можно в телеграм боте:",
     "elevenlabs_buy_info": "Купить API ключ (лимиты) для ElevenLabs можно здесь:",
     "elevenlabs_unlim_buy_info": "Купить API ключ (лимиты) для ElevenLabs Unlimited можно здесь:",
-    "pollinations_info": "Вы можете протестировать сервис и получить токен по этой ссылке:",
+    "pollinations_info": "Вы можете протестировать сервис по этой ссылке:",
+    "pollinations_get_key_info": "Вы можете получить бесплатный ключ по этой ссылке:",
     "openrouter_info": "Здесь вы можете выбрать модели и пополнить баланс:",
     "voicemaker_info": "Пополнить баланс и получить токен можно здесь:",
     "assemblyai_info": "Получить API ключ можно на официальном сайте:",
