--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -12,7 +12,7 @@
     "openrouter_add_model_hint": "Для додавання нової моделі, скопіюйте її повну назву з сайту OpenRouter (наприклад, 'google/gemini-2.0-flash-exp:free') та вставте в це поле,\nпісля чого натисніть кнопку 'Додати'. Додана модель з'явиться у списку вище.",
     "char_limit": "Це максимальна кількість символів, яку дозволяє озвучити ваш поточний тарифний план Voicemaker за один запит.\nЯкщо текст довший, програма автоматично розділить його на частини (чанки) відповідно до цього ліміту.",
     "pollinations_model_label": "Вибір моделі для генерації зображень. Різні моделі мають різні стили та можливості.",
-    "pollinations_token_label": "Введення АПІ ключа (токену) Pollinations. \nПри використанні АПІ доступні всі моделі сервісу, а без АПІ тільки kontext та turbo.",
+    "pollinations_token_label": "Введення АПІ ключа (токену) Pollinations. \nБез апі ключа діюсь дуже жорсткі обмеження, картинка в 15 секунд(це обмеження сервісу PollinationsAI) \nтому отримайте безкоштовний АПІ ключ доступу на сайті https://enter.pollinations.ai/ для генерації 1 картинки в 5 секунд. \nБез ключа доступні наступні моделі: flux, trubo, zimage. \nЗ ключем доступні наступні моделі: kontext, nanobanana, seedream, seedance, veo.",
     "image_size_label": "Налаштування роздільної здатності згенерованих зображень (Ширина x Висота). Рекомендується використовувати стандартні розміри, наприклад 1280x720.",
     "nologo_label": "Якщо увімкнено, програма намагатиметься генерувати зображення без водяного знака Pollinations.",
     "enhance_prompt_label": "Автоматичне покращення вашого текстового запиту нейромережею для отримання більш деталізованого та якісного результату.",
