--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -134,7 +134,7 @@
     "general_tab_title": "Загальні",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "Модель:",
-    "pollinations_token_label": "АПІ (необов'язково):",
+    "pollinations_token_label": "АПІ (бажано!):",
     "pollinations_token_placeholder": "Введіть ваш АПІ ключ",
     "image_size_label": "Розмір (Ширина x Висота):",
     "nologo_label": "Прибрати логотип",
@@ -381,7 +381,8 @@
     "googler_buy_info": "Придбати API ключ можна в телеграм боті:",
     "elevenlabs_buy_info": "Придбати API ключ (ліміти) для ElevenLabs можна тут:",
     "elevenlabs_unlim_buy_info": "Придбати API ключ (ліміти) для ElevenLabs Unlimited можна тут:",
-    "pollinations_info": "Ви можете протестувати сервіс та отримати токен за цим посиланням:",
+    "pollinations_info": "Ви можете протестувати сервіс за цим посиланням:",
+    "pollinations_get_key_info": "Ви можете отримати безкоштовний ключ за цим посиланням:",
     "openrouter_info": "Тут ви можете обрати моделі та поповнити баланс:",
     "voicemaker_info": "Поповнити баланс та отримати токен можна тут:",
     "assemblyai_info": "Отримати API ключ можна на офіційному сайті:",
